--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', sans-serif;
+  background: rgb(46, 96, 18);
+  background: linear-gradient(to right, #245549, #143027);
+  min-height: 100vh;
 }
 
 code {
